--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -8,7 +8,7 @@
     }
 
     #login button{
-        @apply flex justify-start items-center gap-5 p-5 text-gray-200 font-bold w-[372px] h-[72px] bg-gray-600 rounded-lg
+        @apply flex justify-start items-center gap-5 p-5 text-gray-200 font-bold w-[372px] h-[72px] bg-gray-600 hover:bg-gray-650 rounded-lg
     }
 
    #home h1{
