--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -35,24 +35,8 @@
           @apply text-gray-100 text-2xl
    }
 
-   #home h2{
-          @apply text-gray-100 text-lg
-   }
 
-   #home h3{
-          @apply text-gray-400 text-sm
-   }
-
-   #home p{
-          @apply text-gray-300 text-sm
-   }
-
-   
-   #info-profile div{
-       @apply flex gap-5 items-center
-   }
-
-   #info-profile h4{
+   #info-profile h4{ 
        @apply text-gray-200 text-base
    }
 
@@ -75,5 +59,13 @@
    #input-search-book:focus-within svg{
         @apply text-green-200
    }
+
+   #recent-reviews h2{
+        @apply text-base text-gray-100
+   }
+   #recent-reviews h3{
+        @apply text-sm text-gray-400
+   }
+  
 
 }
